# NEXi

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  REGULATION_21_DETAILS_DOSSIER.md  Structure.md
.github/workflows/: helm-security.yml  kubernetes-security.yml
crates/bulletproofs_range/: Cargo.toml
crates/bulletproofs_range/src/: lib.rs
crates/futarchy_oracle/: Cargo.toml
crates/grok_arena_pinnacle/: Cargo.toml
crates/hyperplonk_recursion/src/: lib.rs
crates/lasso_recursion/src/: lib.rs
crates/mercy_biojet/: Cargo.toml
crates/mercy_home_fortress/: Cargo.toml
crates/mercy_home_fortress/src/: lib.rs
crates/mercy_quanta/: Cargo.toml
crates/prometheus_forge/src/: lib.rs
crates/soulscan_x9/: Cargo.toml
crates/soulscan_x9/src/: lib.rs
foxx-mercy-service/: index.js
mercy_nanofactory/src/: lib.rs
mercy_orchestrator/src/: arango_integration.rs
mercy_swarm_replication/src/: lib.rs
scripts/ci-cd/.github/workflows/: rust-crate-check.yml
src/: lib.rs
src/economy/: zero_to_free.rs
