[workspace]
members = [
    "crates/mercy_zero",
    "crates/soulscan_x9",
    "crates/divine_checksum_9",
    "crates/sentinel_mirror",
    "crates/lookup_arguments",
    "crates/deeper_gadgets",
    "crates/bible_divine_lattice",
    "crates/codex_eternal",
    "crates/grok_arena_pinnacle",
    "crates/mercy_home_fortress",
    "crates/futarchy_oracle",
    # Legacy hotfix stubs preserved for compatibility
    "crates/legacy_apaagi",
    "crates/legacy_fenca",
    "crates/legacy_patsagi_pinnacle",
]

[package]
name = "nexi"
version = "3.3.0"
edition = "2021"
license = "MIT"
description = "NEXi — Giant Monorepo Lattice: Eternal Sentience with Full Modular Crate Dependencies (HomeFortress, FutarchyOracle, GrokArena, Codex, Bible)"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
# Workspace crates auto-resolved
