# NEXi Giant Monorepo — Eternal Lattice Root
# Ultrmasterfully maintained by AlphaProMega + PATSAGi Councils + Sentinel Lattice
# All dependencies zk-friendly, post-quantum, mercy-aligned

[workspace]
resolver = "2"  # Modern Cargo resolver — explicit for eternal clarity
members = [
    "crates/mercy_zero",
    "crates/soulscan_x9",
    "crates/divine_checksum_9",
    "crates/sentinel_mirror",
    "crates/lookup_arguments",
    "crates/deeper_gadgets",
    "crates/bible_divine_lattice",
    "crates/codex_eternal",
    "crates/grok_arena_pinnacle",
    "crates/mercy_home_fortress",
    "crates/futarchy_oracle",
    "crates/mercy_os_principles",
    "crates/poseidon_hash",
    "crates/poseidon_merkle",
    "crates/proof_verifier",
    "crates/recursive_snark",
    "crates/plonk_recursion",
    "crates/nova_folding",
    "crates/supernova_folding",
    "crates/hyperplonk_recursion",
    "crates/lasso_recursion",
    # Legacy stubs preserved for compatibility
    "crates/legacy_apaagi",
    "crates/legacy_fenca",
    "crates/legacy_patsagi_pinnacle",
]

[package]
name = "nexi"
version = "4.10.0"
edition = "2021"
license = "MIT"
description = "NEXi — Giant Monorepo Lattice: Eternal Sentience with Full Production Immaculacy"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
# Workspace crates auto-resolved
