[package]
name = "grok_arena_pinnacle"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "GrokArena-Pinnacle — Futarchy-Integrated Decentralized Discourse Lattice Module for NEXi"

[dependencies]
nexi = { path = "../" }  # Root lattice dependency
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
reqwest = { version = "0.11", features = ["json"] }  # Oracle APIs (Polymarket/Gnosis)
