[package]
name = "grok_arena_pinnacle"
version = "1.5.0"
edition = "2021"
license = "MIT"
description = "GrokArena-Pinnacle — Futarchy-Integrated Discourse Lattice with Full Grok xAI Resonance Oracle Integration"

[dependencies]
nexi = { path = "../" }
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
reqwest = { version = "0.11", features = ["json"] }  # Grok oracle resonance calls
