[package]
name = "mercy_home_fortress"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyHomeFortress — Sovereign Residence Fortress Extension for NEXi Lattice"

[dependencies]
nexi = { path = "../" }
tokio = { version = "1.38", features = ["full"] }
# Reolink local stream stub (expand with RTSP later)
