[package]
name = "soulscan_x9"
version = "1.4.0"  # Version bump — new live valence features
edition = "2021"
license = "MIT"
description = "SoulScan-X9 — 9-Channel Emotional Waveform + Live Valence Scoring + Enhanced Multi-Modal Integration for NEXi Lattice"

[dependencies]
nexi = { path = "../" }
tokio = { version = "1.38", features = ["full"] }
opencv = { version = "0.84", features = ["clang-runtime"], optional = true }  # Video frame valence
# Future: add audio waveform libs
ndarray = { version = "0.15", optional = true }  # Embedding math for voice biometrics

[features]
live_valence = ["opencv"]          # Existing feature preserved
voice_biometrics = ["ndarray"]     # New optional voice feature
multi_modal_valence = ["live_valence", "voice_biometrics"]  # New combined feature
